--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,12 +14,12 @@
         android:theme="@style/Theme.BasicChatApp"
         tools:targetApi="31">
         <activity
-            android:name=".SignUpActivity"
+            android:name=".Activity.SignUpActivity"
             android:exported="true">
 
         </activity>
         <activity
-            android:name=".SIgnInActivity"
+            android:name=".Activity.SIgnInActivity"
             android:exported="true">
 
 
