--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,27 +14,23 @@
         android:theme="@style/Theme.BasicChatApp"
         tools:targetApi="31">
         <activity
+            android:name=".Activity.ChatActivity"
+            android:exported="false" />
+        <activity
             android:name=".Activity.SignUpActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".Activity.SIgnInActivity"
             android:exported="true">
-
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-
         </activity>
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
-
-        </activity>
+            android:name=".Activity.MainActivity"
+            android:exported="true"></activity>
     </application>
 
 </manifest>
